fix spell checing

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ branches:
 before_script:
   - npm install yaspeller -g
 script:
-  - yaspeller --only-errors -c common-configs/.yaspellerrc async-book-ru/**/*.md
+  - find ./async-book-ru -iname '*.md' | xargs yaspeller -c common-configs/.yaspellerrc
