--- a/async-book-ru/book.toml
+++ b/async-book-ru/book.toml
@@ -3,7 +3,7 @@ title = "Asynchronous Programming in Rust"
 authors = ["Taylor Cramer"]
 
 [build]
-create-missing = false
+create-missing = true
 
 [preprocess.links]
 
