--- a/async-book/.travis.yml
+++ b/async-book/.travis.yml
@@ -3,14 +3,26 @@ dist: trusty
 language: rust
 cache: cargo
 rust: nightly-2019-08-21 # minimum required version for async/await
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 
 before_install:
   - cargo install mdbook --vers '0.3.1' --debug --force
   - cargo install mdbook-linkcheck --vers '0.3.1' --debug --force
 
 script:
+  - bash ci/spellcheck.sh list
   - mdbook build
   - cargo test --all --manifest-path=./examples/Cargo.toml --target-dir ./target
+
+before_cache:
+  - find ./target/debug -maxdepth 1 -type f -delete
+  - rm -rf ./target/debug/incremental
+  - rm -rf ./target/debug/{deps,.fingerprint}/[0-9][0-9]_[0-9][0-9]_*
+  - rm -f ./target/.rustc_info.json
 
 env:
   RUSTINFRA_DEPLOY_DIR: book/html
