--- a/async-book/.travis.yml
+++ b/async-book/.travis.yml
@@ -2,16 +2,18 @@ sudo: false
 dist: trusty
 language: rust
 cache: cargo
-rust: nightly-2019-08-21 # minimum required version for async/await
+rust: stable
 addons:
   apt:
     packages:
       - aspell
       - aspell-en
 
-before_install:
-  - cargo install mdbook --vers '0.3.1' --debug --force
-  - cargo install mdbook-linkcheck --vers '0.3.1' --debug --force
+before_script:
+  - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
+  - (test -x $HOME/.cargo/bin/mdbook || cargo install --debug --force mdbook)
+  - (test -x $HOME/.cargo/bin/mdbook-linkcheck || cargo install --debug --force mdbook-linkcheck)
+  - cargo install-update -a
 
 script:
   - bash ci/spellcheck.sh list
