--- a/async-book/examples/01_02_why_async/Cargo.toml
+++ b/async-book/examples/01_02_why_async/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "01_02_why_async"
+name = "example_01_02_why_async"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
