--- a/async-book/examples/02_02_future_trait/Cargo.toml
+++ b/async-book/examples/02_02_future_trait/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "02_02_future_trait"
+name = "example_02_02_future_trait"
 version = "0.1.0"
 authors = ["Taylor Cramer <cramertj@google.com>"]
 edition = "2018"
