--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ jobs:
     name: Checking
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       with:
-        submodules: recursive
+        repository: rust-lang-ru/common-configs
+        path: common-configs
     - run: npm install yaspeller
     - run: git show -m --name-only -1 --format="format:" | grep --color=never -i '.md' | xargs node_modules/.bin/yaspeller -c common-configs/.yaspellerrc
   gitlocalize-bug-checking:
